--- a/package.json
+++ b/package.json
@@ -5,9 +5,7 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "vite build",
-    "lint": "eslint .",
-    "preview": "vite preview"
+    "start": "json-server --watch db.json --port 3001"
   },
   "dependencies": {
     "json-server": "^1.0.0-beta.3",
